--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73956 2018-08-29 15:09:34Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74052 2018-09-03 20:09:45Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1654,6 +1654,7 @@ ifdef VBOX_WITH_LIBCURL
  	common/rest/rest-primary-object-types.cpp \
  	common/rest/RTCRestArrayBase.cpp \
  	common/rest/RTCRestClientApiBase.cpp \
+ 	common/rest/RTCRestClientApiBaseOci.cpp \
  	common/rest/RTCRestClientRequestBase.cpp \
  	common/rest/RTCRestClientResponseBase.cpp \
  	common/rest/RTCRestJsonPrimaryCursor.cpp \
