--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73873 2018-08-24 13:47:20Z noreply@oracle.com $
+# $Id: Makefile.kmk 74092 2018-09-05 18:29:21Z alexander.rudnev@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -76,7 +76,8 @@ VBOX_MAIN_DEFS += \
 	$(if $(VBOX_WITH_HOSTNETIF_API),VBOX_WITH_HOSTNETIF_API,) \
 	$(if $(VBOX_WITH_MIDL_PROXY_STUB),VBOX_WITH_MIDL_PROXY_STUB,) \
 	$(if $(VBOX_WITH_SDS),VBOX_WITH_SDS,) \
-       $(if $(VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK),VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK,)
+	$(if $(VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK),VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK,) \
+	$(if $(VBOX_WITH_CLOUD_PROVIDERS_NO_COMMANDS),VBOX_WITH_CLOUD_PROVIDERS_NO_COMMANDS,)
 
 # Unconditionally enable the new semaphore key generation code
 VBOX_MAIN_DEFS += VBOX_WITH_NEW_SYS_V_KEYGEN
