--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74052 2018-09-03 20:09:45Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74093 2018-09-05 19:30:01Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1652,6 +1652,7 @@ ifdef VBOX_WITH_LIBCURL
  	common/misc/s3.cpp \
  	generic/http-curl.cpp \
  	common/rest/rest-primary-object-types.cpp \
+ 	common/rest/RTCRestAnyObject.cpp \
  	common/rest/RTCRestArrayBase.cpp \
  	common/rest/RTCRestClientApiBase.cpp \
  	common/rest/RTCRestClientApiBaseOci.cpp \
