IPRT/http: Fixed two bugs in RTHttpSignHeaders, adding a testcase for it.  bugref:9167
svn:sync-xref-src-repo-rev: r124859

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73665 2018-08-14 17:49:23Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74094 2018-09-05 21:03:06Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -173,7 +173,7 @@ PROGRAMS.darwin += \
 	tstRTDarwinMachKernel
 ifdef VBOX_WITH_LIBCURL
  PROGRAMS += \
-	tstRTHttp \
+	tstRTHttp-1 \
 	tstRTS3
 endif
 if1of ($(KBUILD_TARGET_ARCH), amd64 x86)
@@ -317,9 +317,9 @@ endif
 tstRTDigest-2_SOURCES = tstRTDigest-2.cpp
 
 ifdef VBOX_WITH_LIBCURL
-tstRTHttp_TEMPLATE = VBOXR3TSTEXE
-tstRTHttp_SOURCES = tstRTHttp.cpp
-tstRTHttp_SDKS = VBOX_LIBCURL
+tstRTHttp-1_TEMPLATE = VBOXR3TSTEXE
+tstRTHttp-1_SOURCES = tstRTHttp-1.cpp
+tstRTHttp-1_SDKS = VBOX_LIBCURL
 endif
 
 tstDir_TEMPLATE = VBOXR3TSTEXE
