--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73842 2018-08-22 17:15:51Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 74115 2018-09-06 12:38:34Z alexander.rudnev@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -179,7 +179,8 @@ VirtualBox_DEFS           += \
 	$(if $(VBOX_GUI_WITH_CUSTOMIZATIONS1),VBOX_GUI_WITH_CUSTOMIZATIONS1) \
 	$(if $(VBOX_GUI_WITH_NEW_MANAGER),VBOX_GUI_WITH_NEW_MANAGER) \
 	$(if $(VBOX_WITH_RAW_MODE),VBOX_WITH_RAW_MODE) \
-	$(if $(VBOX_WITH_SDS),VBOX_WITH_SDS,)
+	$(if $(VBOX_WITH_SDS),VBOX_WITH_SDS,) \
+	$(if $(VBOX_WITH_CLOUD_PROVIDERS_NO_COMMANDS),VBOX_WITH_CLOUD_PROVIDERS_NO_COMMANDS,)
 ifdef VBOX_WITH_DEBUGGER_GUI
  VirtualBox_DEFS          += VBOX_WITH_DEBUGGER_GUI
  if "$(KBUILD_TYPE)" != "release"
