IPRT/rest: Split up RTCRestBinaryString into a core RTCRestBinary type and two client side descenants for flexible handling of parameters and responses (still not tested).  bugref:9167
svn:sync-xref-src-repo-rev: r124914

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74117 2018-09-06 13:30:29Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74142 2018-09-07 13:29:43Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1652,9 +1652,9 @@ ifdef VBOX_WITH_LIBCURL
  	common/misc/s3.cpp \
  	generic/http-curl.cpp \
  	common/rest/rest-primary-object-types.cpp \
+ 	common/rest/rest-binary.cpp \
  	common/rest/RTCRestAnyObject.cpp \
  	common/rest/RTCRestArrayBase.cpp \
- 	common/rest/RTCRestBinaryString.cpp \
  	common/rest/RTCRestClientApiBase.cpp \
  	common/rest/RTCRestClientApiBaseOci.cpp \
  	common/rest/RTCRestClientRequestBase.cpp \
