--- a/src/VBox/HostServices/DragAndDrop/Makefile.kmk
+++ b/src/VBox/HostServices/DragAndDrop/Makefile.kmk
@@ -1,10 +1,10 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74205 2018-09-12 09:22:06Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Guest Control Host Service.
 #
 
 #
-# Copyright (C) 2011-2017 Oracle Corporation
+# Copyright (C) 2011-2018 Oracle Corporation
 #
 # This file is part of VirtualBox Open Source Edition (OSE), as
 # available from http://www.virtualbox.org. This file is free software;
@@ -37,6 +37,10 @@ VBoxDragAndDropSvc_INCS.win  = \
 VBoxDragAndDropSvc_SOURCES = \
 	service.cpp \
 	dndmanager.cpp
+
+VBoxDragAndDropSvc_SOURCES += \
+    ../common/client.cpp \
+    ../common/message.cpp
 
 VBoxDragAndDropSvc_SOURCES.win = \
 	VBoxDragAndDropSvc.rc
