--- a/src/VBox/GuestHost/DragAndDrop/Makefile.kmk
+++ b/src/VBox/GuestHost/DragAndDrop/Makefile.kmk
@@ -1,10 +1,10 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74208 2018-09-12 09:37:46Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the shared DnD code for both, host and guest.
 #
 
 #
-# Copyright (C) 2014-2017 Oracle Corporation
+# Copyright (C) 2014-2018 Oracle Corporation
 #
 # This file is part of VirtualBox Open Source Edition (OSE), as
 # available from http://www.virtualbox.org. This file is free software;
@@ -48,6 +48,12 @@ LIBRARIES += VBoxDnDHostR3Lib
 VBoxDnDHostR3Lib_TEMPLATE   = VBOXR3
 VBoxDnDHostR3Lib_DEFS       =
 VBoxDnDHostR3Lib_SOURCES    = $(VBOX_DND_GUESTHOST_FILES)
+
+# Include the common host services code.
+VBOX_PATH_HOSTSERVICES_COMMON = $(PATH_ROOT)/src/VBox/HostServices/common
+VBoxDnDHostR3Lib_SOURCES   += \
+	$(VBOX_PATH_HOSTSERVICES_COMMON)/client.cpp \
+	$(VBOX_PATH_HOSTSERVICES_COMMON)/message.cpp
 
 include $(FILE_KBUILD_SUB_FOOTER)
 
