--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74210 2018-09-12 09:51:09Z klaus.espenlaub@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -37,6 +37,9 @@ else ifdef VBOX_ONLY_EXTPACKS
  include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Devices/Makefile.kmk
  include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
+ ifdef VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK
+  include $(PATH_SUB_CURRENT)/Main/Makefile.kmk
+ endif
  include $(PATH_SUB_CURRENT)/Storage/Makefile.kmk
  include $(PATH_SUB_CURRENT)/ExtPacks/Makefile.kmk
  ifdef VBOX_WITH_VRDP
