--- a/src/libs/xpcom18a4/Makefile.kmk
+++ b/src/libs/xpcom18a4/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74223 2018-09-12 14:19:07Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for XPCOM.
 #
@@ -71,7 +71,7 @@ BLDDIRS  += \
 # We build several libraries so that any linker command line
 # length restrictions limit will be avoided. (Solaris, Mac?)
 #
-ifndef VBOX_ONLY_SDK
+if !defined(VBOX_ONLY_SDK) && !defined(VBOX_ONLY_EXTPACK)
 
 VBOX_XPCOM_LIBRARIES := \
 	VBox-xpcom-nspr \
@@ -132,7 +132,7 @@ PROGRAMS += \
  endif # VBOX_WITH_TESTCASES
 PROGRAMS += VBoxXPCOMIPCD
 
-endif # !VBOX_ONLY_SDK
+endif # !VBOX_ONLY_SDK && !VBOX_ONLY_EXTPACK
 
 
 
