--- a/src/libs/xpcom18a4/Makefile.kmk
+++ b/src/libs/xpcom18a4/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74229 2018-09-12 23:28:58Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74230 2018-09-12 23:42:29Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for XPCOM.
 #
@@ -1201,7 +1201,7 @@ endif
 #
 # Include sub-makefiles for the Python<->XPCOM and Java<->XPCOM bridges.
 #
-ifndef VBOX_ONLY_EXTPACK
+ifndef VBOX_ONLY_EXTPACKS
  # Find the Python headers for the Python<->XPCOM bridge if enabled.
  ifdef VBOX_WITH_PYTHON
   include $(PATH_SUB_CURRENT)/python/Makefile.kmk
@@ -1210,7 +1210,7 @@ ifndef VBOX_ONLY_EXTPACK
  ifdef VBOX_WITH_JXPCOM
   include $(PATH_SUB_CURRENT)/java/Makefile.kmk
  endif
-endif # !VBOX_ONLY_EXTPACK
+endif # !VBOX_ONLY_EXTPACKS
 
 
 #
