--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73606 2018-08-10 07:38:56Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 74242 2018-09-13 14:13:41Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -861,6 +861,7 @@ if !defined(VBOX_ONLY_EXTPACKS) \
 		-D IN_RING0 \
 		-D RT_C_DECLS_BEGIN= \
 		-D RT_C_DECLS_END= \
+		-D RT_GCC_EXTENSION= \
 		-D 'RCPTRTYPE(a_Type)=RTRCPTR' \
 		-D 'R3PTRTYPE(a_Type)=RTR3PTR' \
 		-D 'R0PTRTYPE(a_Type)=a_Type' \
