--- a/src/libs/xpcom18a4/Makefile.kmk
+++ b/src/libs/xpcom18a4/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74267 2018-09-14 14:08:33Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74271 2018-09-14 15:17:12Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for XPCOM.
 #
@@ -1081,7 +1081,11 @@ VBoxXPCOM-x86_LDFLAGS.solaris += -Wl,-z,allextract \
 #
 # VBoxXPCOMImp - Import library/hack.
 #
+ifdef VBOX_WITH_XPCOM_NAMESPACE_CLEANUP
+$(call VBOX_GENERATE_IMPORT_TARGET_FN,VBoxXPCOMImp,VBoxXPCOM,VBoxXPCOM-mangled.def)
+else
 $(call VBOX_GENERATE_IMPORT_TARGET_FN,VBoxXPCOMImp,VBoxXPCOM,VBoxXPCOM.def)
+endif
 
 
 #
