Main/Makefile.kmk: Reduce VBoxAPIWrap sources when VBOX_ONLY_EXTPACK is in effect. bugref:9152
svn:sync-xref-src-repo-rev: r125094

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74238 2018-09-13 13:29:14Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74290 2018-09-15 17:09:58Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -201,7 +201,9 @@ ifndef VBOX_ONLY_SDK
  endif
  VBoxAPIWrap_SOURCES         = \
  	$(VBoxAPIWrap_0_OUTDIR)/VBoxAPI.d \
- 	$(VBOX_MAIN_APIWRAPPER_GEN_SRCS)
+ 	$(if-expr defined(VBOX_ONLY_EXTPACKS) \
+	, $(addprefix $(VBoxAPIWrap_0_OUTDIR)/,$(filter Cloud%, $(notdir $(VBOX_MAIN_APIWRAPPER_GEN_SRCS)))) \
+	, $(VBOX_MAIN_APIWRAPPER_GEN_SRCS))
  VBoxAPIWrap_INTERMEDIATES   = $(VBOX_MAIN_APIWRAPPER_GEN_HDRS)
  VBoxAPIWrap_DEFS.win.x86   += _WIN32_WINNT=0x0500
  VBoxAPIWrap_DEFS.win.amd64 += _WIN32_WINNT=0x0510
