--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74293 2018-09-15 18:49:36Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74295 2018-09-16 15:36:08Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -372,6 +372,8 @@ RuntimeR3_SOURCES       = \
 	common/crypto/key.cpp \
 	common/crypto/key-file.cpp \
 	common/crypto/key-openssl.cpp \
+	common/crypto/key-create-rsa-openssl.cpp \
+	common/crypto/rc4-openssl.cpp \
 	common/crypto/rsa-asn1-decoder.cpp \
 	common/crypto/rsa-core.cpp \
 	common/crypto/rsa-init.cpp \
@@ -392,6 +394,7 @@ RuntimeR3_SOURCES       = \
 	common/crypto/spc-core.cpp \
 	common/crypto/spc-init.cpp \
 	common/crypto/spc-sanity.cpp \
+	common/crypto/ssl-openssl.cpp \
 	common/crypto/x509-asn1-decoder.cpp \
 	common/crypto/x509-certpaths.cpp \
 	common/crypto/x509-core.cpp \
