IPRT/crypto: Added RTCrRandBytes and RTCrPkcs5Pbkdf2Hmac.  The latter means openssl 1.0.0 or higher is now required. bugref:9246
svn:sync-xref-src-repo-rev: r125120

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74295 2018-09-16 15:36:08Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74312 2018-09-17 14:47:59Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -413,6 +413,8 @@ RuntimeR3_SOURCES       = \
 	common/crypto/store.cpp \
 	common/crypto/store-inmem.cpp \
 	common/crypto/store-cert-add-basic.cpp \
+	common/crypto/RTCrPkcs5Pbkdf2Hmac-openssl.cpp \
+	common/crypto/RTCrRandBytes-openssl.cpp \
 	common/crypto/RTCrStoreCertAddFromJavaKeyStore.cpp \
 	common/crypto/RTCrStoreCertAddWantedFromFishingExpedition.cpp \
 	common/crypto/RTCrStoreCertExportAsPem.cpp \
