IPRT/crypto: Simple symmetric cipher abstraction with just was we need right now. Untested. bugref:9246
svn:sync-xref-src-repo-rev: r125122

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74312 2018-09-17 14:47:59Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74313 2018-09-17 15:50:55Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -365,6 +365,7 @@ RuntimeR3_SOURCES       = \
 	common/checksum/sha512str.cpp \
 	common/checksum/sha512t224str.cpp \
 	common/checksum/sha512t256str.cpp \
+	common/crypto/cipher-openssl.cpp \
 	common/crypto/digest-core.cpp \
 	common/crypto/digest-builtin.cpp \
 	common/crypto/digest-vfs.cpp \
