Config.kmk,libs/*.kmk: Only build the extpack openssl libraries if we need them (VBOX_NEED_EXTPACK_OPENSSL).  bugref:9246
svn:sync-xref-src-repo-rev: r125133

--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74223 2018-09-12 14:19:07Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74324 2018-09-17 21:06:52Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -58,8 +58,8 @@ endif
 # OpenSSL.
 if  !defined(VBOX_ONLY_SDK) \
  && (!defined(VBOX_ONLY_ADDITIONS) || !defined(VBOX_ONLY_ADDITIONS_WITHOUT_RTISOMAKER)) \
- && (   "$(SDK_VBOX_OPENSSL_INCS)" == "$(SDK_VBOX_OPENSSL_VBOX_DEFAULT_INCS)" \
-     || defined(VBOX_WITH_EXTPACK_PUEL_BUILD))
+ && (!defined(VBOX_ONLY_EXTPACKS) || defined(VBOX_NEED_EXTPACK_OPENSSL) || !defined(VBOX_ONLY_EXTPACKS_USE_IMPLIBS)) \
+ && ("$(SDK_VBOX_OPENSSL_INCS)" == "$(SDK_VBOX_OPENSSL_VBOX_DEFAULT_INCS)" || defined(VBOX_NEED_EXTPACK_OPENSSL))
  include $(PATH_SUB_CURRENT)/openssl-1.1.0h/Makefile.kmk
 endif
 
