--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74327 2018-09-17 22:13:09Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74328 2018-09-17 22:18:51Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -2344,7 +2344,7 @@ $(call VBOX_GENERATE_IMPORT_TARGET_FN,VBoxRTImp,VBoxRT,VBox/VBoxRTImp.def VBox/V
 endif
 
 
-if1of ($(KBUILD_TARGET),win) # remove later
+if1of ($(KBUILD_TARGET),win darwin) # remove later
 if1of (VBoxRT,$(DLLS))
  #
  # VBoxRTImpCheck - Import library check.
