--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74372 2018-09-19 15:07:27Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74414 2018-09-21 18:23:01Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -2091,6 +2091,9 @@ ifdef VBOX_WITH_LIBCURL
  	common/rest/RTCRestClientResponseBase.cpp \
  	common/rest/RTCRestJsonPrimaryCursor.cpp \
  	common/rest/RTCRestStringMapBase.cpp \
+ 	common/rest/RTCRestOutputBase.cpp \
+ 	common/rest/RTCRestOutputPrettyBase.cpp \
+ 	common/rest/RTCRestOutputPrettyToString.cpp \
  	common/rest/RTCRestOutputToString.cpp
 endif
 ifdef VBOX_WITH_DTRACE_R3
