IPRT/rest: Missed RT_NOEXCEPT in two place.  Went wild adding RT_NOEXCEPT everywhere possible.  bugref:9167
svn:sync-xref-src-repo-rev: r125260

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74414 2018-09-21 18:23:01Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74425 2018-09-23 15:41:48Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -2347,7 +2347,7 @@ $(call VBOX_GENERATE_IMPORT_TARGET_FN,VBoxRTImp,VBoxRT,VBox/VBoxRTImp.def VBox/V
 endif
 
 
-if1of ($(KBUILD_TARGET),win darwin) # remove later
+if1of ($(KBUILD_TARGET),win linux darwin) # remove later
 if1of (VBoxRT,$(DLLS))
  #
  # VBoxRTImpCheck - Import library check.
