IPRT: Implemented long filename support for windows (except for LoadLibrary). bugref:9248
svn:sync-xref-src-repo-rev: r125313

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74425 2018-09-23 15:41:48Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74460 2018-09-25 15:42:33Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -874,6 +874,7 @@ RuntimeR3_SOURCES.win = \
 	r3/win/localipc-win.cpp \
 	r3/win/mp-win.cpp \
 	r3/win/path-win.cpp \
+	r3/win/pathint-win.cpp \
 	r3/win/pipe-win.cpp \
 	r3/win/process-win.cpp \
 	r3/win/RTLogWriteDebugger-win.cpp \
@@ -1869,6 +1870,7 @@ RuntimeBldProg_SOURCES.win = \
 	r3/win/init-win.cpp \
 	r3/win/ldrNative-win.cpp \
 	r3/win/path-win.cpp \
+	r3/win/pathint-win.cpp \
 	r3/win/pipe-win.cpp \
 	r3/win/process-win.cpp \
 	r3/win/RTHandleGetStandard-win.cpp \
