VMM/testcase: Added simple native NEM engine benchmark, currently only supporting windows. bugref:9044
svn:sync-xref-src-repo-rev: r125392

--- a/src/VBox/VMM/testcase/Makefile.kmk
+++ b/src/VBox/VMM/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 72892 2018-07-04 16:39:51Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74524 2018-09-28 14:00:23Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the VMM testcases.
 #
@@ -405,6 +405,21 @@ ifdef VBOX_WITH_RAW_MODE
  tstMicroRC_SOURCES.win = tstMicroRC.def
 
 endif # VBOX_WITH_RAW_MODE
+
+
+#
+# Special NEM host testcase.
+#
+if1of ($(KBUILD_TARGET).$(KBUILD_TARGET_ARCH),win.amd64)
+ PROGRAMS += NemRawBench-1
+ NemRawBench-1_TEMPLATE = VBoxR3Static
+ NemRawBench-1_SOURCES = NemRawBench-1.cpp
+ NemRawBench-1_BLD_TYPE = release
+ NemRawBench-1_INCS.win = \
+        $(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17134.0/include/10.0.17134.0/um \
+        $(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17134.0/include/10.0.17134.0/shared
+endif
+
 
 ifdef VBOX_WITH_PDM_ASYNC_COMPLETION
  #
