FE/Qt: bugref:9241: VirtualBox Manager: Separate Error pane from Welcome pane, they are used in different tool panes.
svn:sync-xref-src-repo-rev: r125426

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74551 2018-10-01 14:19:25Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 74557 2018-10-01 16:02:42Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -753,6 +753,7 @@ ifndef VBOX_GUI_WITH_NEW_MANAGER
 	src/selector/graphics/details/UIGMachinePreview.h
 else
  VirtualBox_QT_MOCHDRS += \
+	src/manager/UIErrorPane.h \
 	src/manager/UIToolbarTools.h \
 	src/manager/UIToolPaneGlobal.h \
 	src/manager/UIToolPaneMachine.h \
@@ -1442,6 +1443,7 @@ ifndef VBOX_GUI_WITH_NEW_MANAGER
 	src/selector/graphics/details/UIGMachinePreview.cpp
 else
  VirtualBox_SOURCES += \
+	src/manager/UIErrorPane.cpp \
 	src/manager/UIToolbarTools.cpp \
 	src/manager/UIToolPaneGlobal.cpp \
 	src/manager/UIToolPaneMachine.cpp \
