IPRT: More adjustments to the LX and Mach-O loader code from kStuff. bugref:9232
svn:sync-xref-src-repo-rev: r125533

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74638 2018-10-06 18:31:59Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74643 2018-10-06 19:39:41Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -271,7 +271,9 @@ RuntimeR3_DEFS          = \
 	RT_WITHOUT_NOCRT_WRAPPERS \
 	IPRT_WITH_OPENSSL \
 	NOFILEID
-#	+= LDR_WITH_MACHO
+ifeq ($(USERNAME),bird)
+ RuntimeR3_DEFS += LDR_WITH_MACHO
+endif
 if1of ($(KBUILD_TARGET_ARCH), amd64 x86)
  RuntimeR3_DEFS         += \
  	IN_SUP_R3
