--- a/src/VBox/Runtime/common/asn1/oiddb.cfg
+++ b/src/VBox/Runtime/common/asn1/oiddb.cfg
@@ -1,4 +1,4 @@
-# $Id: oiddb.cfg 69434 2017-10-27 15:48:25Z knut.osmundsen@oracle.com $
+# $Id: oiddb.cfg 74692 2018-10-08 18:48:31Z knut.osmundsen@oracle.com $
 ## @file
 # OID names.
 #
@@ -82,12 +82,19 @@
 1.2.840.113549.1.9.16.1.31      = pkcs9-ct-TimestampedData
 1.2.840.113549.1.9.16.2         = pkcs9-SMime-id-aa
 1.2.840.113549.1.9.16.2.12      = pkcs9-id-aa-SigningCertificate
+1.2.840.113549.1.9.16.2.14      = pkcs9-id-aa-Attributes
 1.2.840.113549.1.9.25           = pkcs9-SMime-at
 1.2.840.113549.1.9.25.1         = pkcs9-at-Pkcs15Token
 1.2.840.113549.1.9.25.2         = pkcs9-at-EncryptedPrivateKeyInfo
 1.2.840.113549.1.9.25.3         = pkcs9-at-RandomNonce
 1.2.840.113549.1.9.25.4         = pkcs9-at-SequenceNumber
 1.2.840.113549.1.9.25.5         = pkcs9-at-Pkcs7PDU
+1.2.840.113635.100.6.1.13       = apple-cs-ext-DevId-Application
+1.2.840.113635.100.6.1.14       = apple-cs-ext-DevId-Installer
+1.2.840.113635.100.6.1.18       = apple-cs-ext-DevId-KernelExt
+1.2.840.113635.100.5.1          = apple-cert-policy
+1.2.840.113635.100.4.13         = apple-eku-packageSign
+#1.2.840.113635.100.9.1         = apple-???
 1.3.6                           = dod
 1.3.6.1                         = dod-Internet
 1.3.6.1.4.1.311                 = microsoft
