Dropping VBoxDD2R0.r0 & VBoxDDR2RC.rc as they are empty (and thereby causes darwin signing issues). bugref:9232
svn:sync-xref-src-repo-rev: r125709

--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73911 2018-08-27 12:09:03Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 74770 2018-10-11 12:59:30Z knut.osmundsen@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -478,14 +478,12 @@ VBOX_DI_VBAPP_UNIVERSAL_PROGS = \
 
 VBOX_DI_VBAPP_OTHER_UNIVERSAL_BINS = \
 	MacOS/VMMR0.r0 \
-	MacOS/VBoxDDR0.r0 \
-	MacOS/VBoxDD2R0.r0
+	MacOS/VBoxDDR0.r0
 
 ifdef VBOX_WITH_RAW_MODE
  VBOX_DI_VBAPP_OTHER_BINS = \
 	MacOS/VMMRC.rc \
-	MacOS/VBoxDDRC.rc \
-	MacOS/VBoxDD2RC.rc
+	MacOS/VBoxDDRC.rc
 else
  VBOX_DI_VBAPP_OTHER_BINS =
 endif
