OCI: Get rid of the VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK switch which is always true now.  G/c VirtualBox references that were always NULL in extpack.
svn:sync-xref-src-repo-rev: r125934

--- a/src/VBox/Makefile.kmk
+++ b/src/VBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74210 2018-09-12 09:51:09Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 74926 2018-10-18 15:32:37Z noreply@oracle.com $
 ## @file
 # Top-level makefile for src/VBox.
 #
@@ -37,9 +37,7 @@ else ifdef VBOX_ONLY_EXTPACKS
  include $(PATH_SUB_CURRENT)/Runtime/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Devices/Makefile.kmk
  include $(PATH_SUB_CURRENT)/HostDrivers/Makefile.kmk
- ifdef VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK
-  include $(PATH_SUB_CURRENT)/Main/Makefile.kmk
- endif
+ include $(PATH_SUB_CURRENT)/Main/Makefile.kmk
  include $(PATH_SUB_CURRENT)/Storage/Makefile.kmk
  include $(PATH_SUB_CURRENT)/ExtPacks/Makefile.kmk
  ifdef VBOX_WITH_VRDP
