--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74853 2018-10-15 18:36:00Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 74940 2018-10-19 10:45:21Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -269,6 +269,7 @@ ifdef VBOX_GUI_WITH_SHARED_LIBRARY
  endif
  ifneq ($(KBUILD_TYPE),release)
   VirtualBoxVM_DEFS          += VBOX_GUI_WITH_EXTRADATA_MANAGER_UI
+  VirtualBoxVM_DEFS          += VBOX_GUI_WITH_GUEST_CONTROL_UI
  endif
  ifdef VBOX_WITH_ICHAT_THEATER
   VirtualBoxVM_DEFS.darwin   += VBOX_WITH_ICHAT_THEATER
