VideoRec/Main: Split up code into more modules for easier maintenance.
svn:sync-xref-src-repo-rev: r126016

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 74926 2018-10-18 15:32:37Z noreply@oracle.com $
+# $Id: Makefile.kmk 74992 2018-10-23 11:09:22Z andreas.loeffler@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -801,7 +801,10 @@ ifdef VBOX_WITH_VIDEOREC
    VBoxC_SDKS += VBOX_VPX
    VBoxC_DEFS += VBOX_WITH_LIBVPX
    VBoxC_SOURCES += \
-	src-client/VideoRec.cpp
+	src-client/VideoRec.cpp \
+	src-client/VideoRecInternals.cpp \
+	src-client/VideoRecStream.cpp \
+	src-client/VideoRecUtils.cpp
   else
    $(error "VBox: No alternative for VPX when using video capturing support yet")
   endif
